--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ repositories {
 }
 
 dependencies {
+    compile 'com.sun.jersey:jersey-client:1.9.1'
     compile files('C:\\workplace\\HttpServer\\build\\libs\\HttpServer-1.0.jar')
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
